# leetcode-local-debug-tmpl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  test_sources.cmake.in
cn/: test_1_two_sum.py  test_2_两数相加.cpp
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/cn/: test_1_two_sum.cpp  test_2_add_two_numbers.cpp  test_2_两数相加.cpp
cpp/common/: common.cpp  common.h
cpp/tmpl/: jetbrains_tmpl.md
en/: test_10_regular_expression_matching.py  test_1_two_sum.py
py/: .gitignore  README.md  jetbrain_editor_template.md  jetbrain_editor_template2.md  pyproject.toml
py/cn/: test_1_two_sum.py  test_2_add_two_numbers.py
py/en/: test_1_two_sum.py
py/tools/: print_vscode_snippets.py
